--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 .search-bar {
-	margin: 20px;
-	text-aling: center;
+	margin: 5px;
+	text-alig: center;
 }
 
 .search-bar input {
@@ -8,7 +8,7 @@
 }
 
 .video-item img {
-	max-width: 64px;
+	max-width: 80px;
 }
 
 .video-detail .details {
@@ -28,6 +28,7 @@
 
 .videoTitle {
 	font-weight: bold;
+	font-size: 35px;
 }
 
 .theater {
@@ -38,4 +39,12 @@
   border-right: 100% solid black;
   border-left: 100% solid black;
   margin: auto;
+}
+
+.buttonStyle {
+	margin-left: 18px;
+}
+
+.roomType {
+	background: gray;
 }
