--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,3 @@
-.search-bar {
-	margin: 5px;
-	text-alig: center;
-}
-
-.search-bar input {
-	width: 75%;
-}
-
 .video-item img {
 	max-width: 80px;
 }
@@ -16,6 +7,7 @@
 	padding: 10px;
 	border: 1px solid #ddd;
 	border-radius: 4px;
+	width: 100%
 }
 
 .list-group-item {
